--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/cli": "^7.15.7",
     "@babel/core": "^7.15.8",
     "@babel/preset-env": "^7.15.8",
+    "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.15.0",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
